[package]
name = "safestake_crypto"
version = "0.1.0"
edition = "2021"
authors = ["Zico <zhicong303@gmail.com", "Will <jianlinjiang@whu.edu.cn>"]

[dependencies]
bls = { workspace = true }
dvf_utils = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
slog = { workspace = true }
types = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "signal", "macros", "net"] }
futures = { workspace = true }
tokio-util = { workspace = true }
bincode = { workspace = true }
ethereum_hashing = { workspace = true }

aes-gcm = "0.10.3"
array-init = "2.1.0"
base64 = "0.22.1"
blst = "0.3.13"
bytes = "1.8.0"
hex = "0.4.3"
lazy_static = "1.5.0"
miracl_core = { version = "2.7.0", features = ["bls12381"] }
num-bigint = { version = "0.4.6", features = ["rand"] }
num-traits = "0.2.19"
rand = { version = "0.8.5", features = ["small_rng"] }
secp256k1 = { version = "0.30.0", features = ["global-context", "std", "rand"] }
sha256 = "1.5.0"
async-trait = "0.1.83"

[dev-dependencies]
slog-term = { workspace = true }
slog-async = { workspace = true }


