[package]
name = "safestake_operator"
version = "0.1.0"
edition = "2021"

[dependencies]
bls = { workspace = true }
types = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true }
tokio = { workspace = true }
account_utils = { workspace = true }
safestake_crypto = { workspace = true }
dvf_utils = { workspace = true }
store = { workspace = true }
hex = { workspace = true }
serde_yaml = { workspace = true }
r2d2 = { workspace = true }
rusqlite = { workspace = true }
lighthouse_network = { workspace = true }
slashing_protection = { workspace = true }
filesystem = { workspace = true }
task_executor = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
validator_metrics = { workspace = true }
ethereum_serde_utils = { workspace = true }
alloy-primitives = "0.8.13"
async-trait = "0.1.83"
chrono = { version = "0.4"}
keccak-hash = "0.10.0"
r2d2_sqlite = "0.21.0"
lazy_static = "1.5.0"
url = "2"
tonic = "0.11"
prost = "0.12"

[build-dependencies]
tonic-build = { version = "0.11.0", features = ["prost"] }
