[package]
name = "safestake_service"
version = "0.1.0"
edition = "2021"

[dependencies]
signing_method = { workspace = true }
safestake_operator = { workspace = true }
validator_store = { workspace = true }
account_utils = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true }
tokio = { workspace = true }
safestake_crypto = { workspace = true }
dvf_utils = { workspace = true }
types = { workspace = true }
task_executor = { workspace = true }
parking_lot = { workspace = true }
slashing_protection = { workspace = true }
eth2_keystore = { workspace = true }
eth2_keystore_share = { workspace = true }
lighthouse_network = { workspace = true }
validator_dir = { workspace = true, features = ["insecure_keys"] }
slot_clock = { workspace = true }
store = { workspace = true }
bls = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true, features = ["native-tls"] }
rand = { workspace = true, features = ["small_rng"] }
dirs = { workspace = true }
hex = { workspace = true }
directory = { workspace = true }
alloy-primitives = "0.8.13"
alloy-provider = "0.6.4"
alloy-rpc-types = "0.6.4"
alloy-sol-macro = "0.8.13"
alloy-sol-types = "0.8.13"
alloy-contract = "0.6.4"
alloy-transport-http = "0.6.4"
tonic = "0.11"
prost = "0.12"
keccak-hash = "0.10.0"