[package]
name = "safestake_service"
version = "0.1.0"
edition = "2021"
authors = ["Zico <zhicong303@gmail.com", "Will <jianlinjiang@whu.edu.cn>"]

[dependencies]
account_utils = { workspace = true }
bincode = { workspace = true }
bls = { workspace = true }
directory = { workspace = true }
dirs = { workspace = true }
dvf_utils = { workspace = true }
eth2_keystore = { workspace = true }
eth2_keystore_share = { workspace = true }
hex = { workspace = true }
lighthouse_network = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
reqwest = { workspace = true, features = ["native-tls"] }
safestake_crypto = { workspace = true }
safestake_operator = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
signing_method = { workspace = true }
slashing_protection = { workspace = true }
slog = { workspace = true }
slot_clock = { workspace = true }
store = { workspace = true }
task_executor = { workspace = true }
tokio = { workspace = true }
types = { workspace = true }
validator_dir = { workspace = true, features = ["insecure_keys"] }
validator_store = { workspace = true }

alloy-contract = "0.6.4"
alloy-primitives = "0.8.13"
alloy-provider = "0.6.4"
alloy-rpc-types = "0.6.4"
alloy-sol-macro = "0.8.13"
alloy-sol-types = "0.8.13"
alloy-transport-http = "0.6.4"
keccak-hash = "0.10.0"
tonic = "0.11"
