[package]
name = "signing_method"
version = "0.1.0"
edition = { workspace = true }
authors = ["Sigma Prime <contact@sigmaprime.io>"]

[dependencies]
eth2_keystore = { workspace = true }
ethereum_serde_utils = { workspace = true }
lockfile = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
task_executor = { workspace = true }
types = { workspace = true }
url = { workspace = true }
validator_metrics = { workspace = true }

eth2_keystore_share = { workspace = true }
slog = { workspace = true }
tokio = { workspace = true }
chrono = { version = "0.4"}
serde_json = { workspace = true }
safestake_operator = { workspace = true }
